# libsnark_sample

./: .gitmodules  CMakeLists.txt  README.md
circuit/: merklecircuit.h
merkle/: CMakeLists.txt  main.cpp
